# auto-maintainer

./: .gitattributes  .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: tests.yml
auto_maintainer/: __init__.py  analyzer.py  ci_watcher.py  cli.py  config.py  doctor.py  git_ops.py  github.py  models.py  planner.py  reporting.py  scoring.py  state.py
docs/: macbook-air-sync.md
examples/: config.json
scripts/: macbook-bootstrap.sh  macbook-sync.sh  windows-publish.ps1
tests/: test_ci_classifier.py  test_config.py  test_doctor.py  test_git_ops.py  test_github.py  test_merge_gate.py  test_planner.py  test_reporting.py  test_scoring.py  test_state.py
