[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "auto-maintainer"
version = "0.1.0"
description = "A cautious GitHub maintenance loop controller for scoring, reporting, and watching automation candidates."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "auto-maintainer contributors" }]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8,<10"]

[project.scripts]
auto-maintainer = "auto_maintainer.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
